addes exlamation mark to index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="welcome" id="welcome">
       <h1>Welcome!!</h1>
-      <p>Now you're here, you have to play a game with me!</p>
+      <p>Now you're here, you have to play a game with me!!</p>
       <!--This button will trigger the next button-->
       <button type="button" name="button" onclick="teaser()">Ready?</button>
     </div>
